# Soroban-Smart-Block

./: README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  cliff.toml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  contract-tests.yml  deploy.yml  maintenance.yml  merge-conflict-check.yml  pr-quality.yml  security.yml
contracts/ticket/: Cargo.toml
contracts/ticket/fuzz/: Cargo.toml
contracts/ticket/fuzz/fuzz_targets/: fuzz_full_lifecycle.rs  fuzz_mint.rs  fuzz_transfer.rs  fuzz_verify.rs
contracts/ticket/src/: kani_proofs.rs  lib.rs  multi_contract_tests.rs  test.rs
docs/site/: conflict-dashboard.html  visual-diff.html
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/test/: api.test.ts
indexer/: eslint.config.js  openapi.yaml  package-lock.json  package.json
indexer/src/: alertManager.js  api.js  archivalEvictionDetector.js  batch.js  db.js  deadLetterQueue.js  decoder.js  doctor-lib.js  index.js  kafkaEventBus.js  leaderElection.js  predictiveGapDetector.js  rpcProviderPool.js  rpcRetry.js  seed-lib.js  sep41Metadata.js  ttlExtensionParser.js  verify_abi.js  wasmBuildMetadata.js  wsEvents.js  xdr_decoder.js  zkHostFunctions.js
infra/: main.tf  outputs.tf  variables.tf
scripts/: conflict-check.js  conflict-complexity-scorer.js  conflict-dashboard.js  doctor.js  install-hooks.js  load-env.js  merge-queue.js  ml-conflict-resolver.js  seed.js  semantic-conflict-detector.js  setup.js  visual-diff.js
(+102 files in other folders)
