[package]
name = "ticket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk      = { version = "21.0.0", features = ["testutils"] }
proptest         = { version = "1.4",  default-features = false, features = ["alloc"] }
proptest-derive  = "0.4"

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true

# Separate profile used by cargo-fuzz.
[profile.fuzz]
inherits        = "dev"
opt-level       = 1
overflow-checks = true
